welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:3: error: ')' expected but 'return' found.
  if((you >=8 && date>2) || (date>=8 && you>2)return 2
                                              ^dateFashion:4: error: ';' expected but 'if' found.
  if(you<=2 || date<=2)return 0
  ^